samples/_failures_safe/1761529947_6f49ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_726567ff.c: In function ‘main’:
./samples/SAFE/__tmp_726567ff.c:142:9: error: expected declaration or statement at end of input
  142 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_726567ff.c:142:9: error: expected declaration or statement at end of input
